--- a/_design/index.html
+++ b/_design/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Introduction
+title: Design Your Digital Identity Collection and Sharing Process
 collection: design
 ---
 {% capture index %}{% include design_index.md %}{% endcapture %}
