--- a/_implement/index.html
+++ b/_implement/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Introduction
+title: Implement Your Digital Identity Collection and Sharing Process
 collection: implement
 ---
 {% capture index %}{% include implement_index.md %}{% endcapture %}
