--- a/_overview/index.html
+++ b/_overview/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Introduction
+title: Overview of Digital Identity Collection and Sharing
 collection: overview
 ---
 {% capture index %}{% include overview_index.md %}{% endcapture %}
