--- a/_plan/index.html
+++ b/_plan/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Introduction
+title: Plan Your Digital Identity and Collection Process
 collection: plan
 ---
 {% capture index %}{% include plan_index.md %}{% endcapture %}
